vpc.tf
resource "aws_vpc" "akhil" {
    cidr_block = "10.0.0.0/16"
    tags = {
      "Name" = "akhil"
    }

}
